Data Transfer modifier: crash/assert going into editmode on a source object #79520

Closed
opened 2020-08-04 16:47:45 +02:00 by Philipp Oeser · 5 comments
Member

System Information
Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-04 14:10, hash: b1976d131c
Worked: deaff945d0b9^
Caused by deaff945d0

Short description of error
Data Transfer modifier: crash/assert going into editmode on a source object

Exact steps for others to reproduce the error
data_transfer_assert_editmode_on_src.blend

  • Open file
  • Select src object
  • Go into editmode --> crash
BLI_assert failed: /blender/source/blender/blenkernel/intern/mesh_remap.c:1420, BKE_mesh_remap_calc_loops_from_mesh(), at 'poly_nors_src != ((void *)0)'

#79517 might be related.

**System Information** Operating system: Linux-5.7.10-201.fc32.x86_64-x86_64-with-fedora-32-Thirty_Two 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 440.100 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-08-04 14:10, hash: `b1976d131c` Worked: deaff945d0b9^ Caused by deaff945d0 **Short description of error** Data Transfer modifier: crash/assert going into editmode on a source object **Exact steps for others to reproduce the error** [data_transfer_assert_editmode_on_src.blend](https://archive.blender.org/developer/F8744811/data_transfer_assert_editmode_on_src.blend) - Open file - Select `src` object - Go into editmode --> crash ``` BLI_assert failed: /blender/source/blender/blenkernel/intern/mesh_remap.c:1420, BKE_mesh_remap_calc_loops_from_mesh(), at 'poly_nors_src != ((void *)0)' ``` #79517 might be related.
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscribers: @mont29, @ideasman42

Added subscribers: @mont29, @ideasman42
Bastien Montagne self-assigned this 2020-08-04 19:48:34 +02:00

This issue was referenced by 56d7e39b92

This issue was referenced by 56d7e39b92997768b3db8ce2dbc262f869994145

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#79520
No description provided.