Fix T79520: Data Transfer modifier: crash/assert going into editmode on a source object.